--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Hero Section تمثل الواجهة الرئيسية للموقع
       <!-- Item 2 -->
       <div class="col-md-6 col-lg-4">
         <div class="portfolio-card">
-          <img src="../assets/images/portfolio2.jpg" alt="توثيق الأضرار">
+          <img src="assets/images/portfolio2.jpg" alt="توثيق الأضرار">
           <div class="portfolio-overlay">
             <h5>توثيق الأضرار</h5>
           
@@ -342,7 +342,7 @@ Hero Section تمثل الواجهة الرئيسية للموقع
 
     <div class="media-box mx-auto">
       <video class="media-video" controls>
-        <source src="../assets/video/demo.mp4" type="video/mp4">
+        <source src="assets/video/demo.mp4" type="video/mp4">
         متصفحك لا يدعم تشغيل الفيديو.
       </video>
     </div>
@@ -410,3 +410,4 @@ footer الصفحة
 
 </body>
 </html>
+
